[package]
name = "poem-route-macro"
version = "0.1.0"
authors = ["Blake Rain <blake.rain@blakerain.com>"]
description = "Simple macro for easier Poem route definition"
repository = "https://git.blakerain.com/BlakeRain/poem-route-macro"
homepage = "https://git.blakerain.com/BlakeRain/poem-route-macro"
readme = "README.md"
keywords = ["poem", "route", "macro"]
license = "BSD3"
edition = "2021"

[registries.blakerain]
index = "sparse+https://git.blakerain.com/api/packages/BlakeRain/cargo/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }

